Modified to github pages.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NTCUSTSA</title>
-  <link rel="stylesheet" href="../style/reset.css">
-  <link rel="stylesheet" href="../style/normalize.css.css">
-  <link rel="stylesheet" href="../style/main.css">
-  <link rel="stylesheet" href="../style/response.css">
+  <link rel="stylesheet" href="style/reset.css">
+  <link rel="stylesheet" href="style/normalize.css.css">
+  <link rel="stylesheet" href="style/main.css">
+  <link rel="stylesheet" href="style/response.css">
 </head>
 
 <body>
@@ -27,8 +27,8 @@
           <div class="drow">
             <div class="dcol">
               <div id="e-logo">
-                <a href="main.html">
-                  <div id="e-fig"><img src="../img/enter.jpg" alt=""></div>
+                <a href="views/main.html">
+                  <div id="e-fig"><img src="img/enter.jpg" alt=""></div>
                   <div id="e-click">點擊進入</div>
                 </a>
               </div>
